Toolbar: fixed spacing issue for search bar

--- a/src/app/core/components/toolbar/toolbar.component.scss
+++ b/src/app/core/components/toolbar/toolbar.component.scss
@@ -36,7 +36,7 @@ button {
 
   .search-icon {
     position: absolute;
-    top: 4px;
+    top: 5px;
     left: 10px;
   }
 
@@ -47,7 +47,7 @@ button {
   .close-icon {
     position: absolute;
     position: absolute;
-    top: 4px;
+    top: 5px;
     right: 10px;
   }
 
